Se agrega registro de usuario

--- a/inventario-app/src/app/app.html
+++ b/inventario-app/src/app/app.html
@@ -17,6 +17,7 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" routerLink="productos" routerLinkActive="active">Inicio</a>
           <a class="nav-link" routerLink="agregar-producto" routerLinkActive="active">Agregar Producto</a>
+          <a class="nav-link" routerLink="agregar-usuario" routerLinkActive="active">Registrarse</a>
         </div>
       </div>
     </div>
