se agrega inicio de sesión con autenticación

--- a/inventario-app/src/app/agregar-usuario/agregar-usuario.html
+++ b/inventario-app/src/app/agregar-usuario/agregar-usuario.html
@@ -1,91 +1,96 @@
-<div class="container">
-  <div class="card o-hidden border-0 shadow-lg my-5">
-    <div class="card-body p-0">
-      <!-- Nested Row within Card Body -->
-      <div class="row">
-        <div class="col-lg-5 d-none d-lg-block bg-register-image"></div>
-        <div class="col-lg-7">
-          <div class="p-5">
-            <div class="text-center">
-              <h1 class="h4 text-gray-900 mb-4">Crear Cuenta!</h1>
-            </div>
+<div class="container-fluid body">
 
-            <form (ngSubmit)="onSubmit()" #form="ngForm" class="user">
-              <div class="form-group row">
-                <div class="col-sm-12 mb-3 mb-sm-0">
-                  <input
-                    type="text"
-                    class="form-control form-control-user"
-                    id="usuario"
-                    name="usuario"
-                    placeholder="Usuario"
-                    [(ngModel)]="usuario.usuario"
-                  />
-                </div>
-              </div>
-              <div class="form-group">
-                <input
-                  type="email"
-                  class="form-control form-control-user"
-                  id="email"
-                  name="email"
-                  placeholder="Correo electrónico"
-                  [(ngModel)]="usuario.email"
-                />
-              </div>
-              <div class="form-group row">
-                <div class="col-sm-6 mb-3 mb-sm-0">
-                  <input
-                    type="password"
-                    class="form-control form-control-user"
-                    id="password1"
-                    name="contrasena"
-                    placeholder="Contraseña"
-                    [(ngModel)]="usuario.contrasena"
-                  />
-                </div>
-                <div class="col-sm-6">
-                  <input
-                    type="password"
-                    class="form-control form-control-user"
-                    id="password2"
-                    name="contrasena2"
-                    placeholder="Repite Contraseña"
-                    [(ngModel)]="contrasena2"
-                  />
-                </div>
-              </div>
-              @if (contrasenasNoCoinciden) {
-              <div class="text-danger">Las contraseñas no coinciden.</div>
-              } @if (registroExitoso) {
-              <div class="alert alert-success mt-3">
-                Usuario creado exitosamente.
-              </div>
-              }
 
-              <button type="submit" class="btn btn-primary btn-user btn-block">
-                Registrar Cuenta
-              </button>
-              <hr />
-              <a href="index.html" class="btn btn-google btn-user btn-block"
-                ><i class="fab fa-google fa-fw"></i> Register with Google</a
-              >
-              <a href="index.html" class="btn btn-facebook btn-user btn-block"
-                ><i class="fab fa-facebook-f fa-fw"></i> Register with Facebook
-              </a>
-            </form>
-            <hr />
-            <div class="text-center">
-              <a class="small" href="forgot-password.html">Forgot Password?</a>
-            </div>
-            <div class="text-center">
-              <a class="small" href="login.html"
-                >Already have an account? Login!</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
+<!-- Login Container -->
+<div class="login-container">
+  <!-- Header -->
+  <div class="login-header">Crear Cuenta</div>
+
+  <!-- Form -->
+  <form (ngSubmit)="onSubmit()" #form="ngForm">
+    <!-- Usuario Field -->
+    <div class="form-group">
+      <input
+        type="email"
+        class="form-control"
+        id="usuario"
+        name="usuario"
+        placeholder="Usuario"
+        [(ngModel)]="usuario.usuario"
+      />
     </div>
+
+    <!-- Email Field -->
+    <div class="form-group">
+      <input
+        type="email"
+        class="form-control"
+        id="email"
+        name="email"
+        placeholder="Correo electrónico"
+        [(ngModel)]="usuario.email"
+      />
+    </div>
+
+    <!-- Password Field -->
+    <div class="form-group">
+      <input
+        type="password"
+        class="form-control"
+        id="password1"
+        name="contrasena"
+        placeholder="Contraseña"
+        [(ngModel)]="usuario.contrasena"
+      />
+    </div>
+
+    <!-- Repeat Password Field -->
+    <div class="form-group">
+      <input
+        type="password"
+        class="form-control"
+        id="password2"
+        name="contrasena2"
+        placeholder="Repite Contraseña"
+        [(ngModel)]="contrasena2"
+      />
+    </div>
+
+    <div class="form-check">
+      <input type="checkbox" class="form-check-input" id="rememberMe" />
+      <label class="form-check-label" for="rememberMe"
+        >Estoy de acuerdo con las Politicas de privacidad</label
+      >
+    </div>
+
+     @if (contrasenasNoCoinciden) {
+        <div class="text-danger">Las contraseñas no coinciden.</div>
+      } 
+      @if (registroExitoso) {
+        <div class="alert alert-success mt-3">
+          Usuario creado exitosamente.
+        </div>
+      }
+
+    <!-- Login Button -->
+    <button type="submit" class="btn btn-primary btn-login">
+      Crear Cuenta
+    </button>
+  </form>
+
+  <!-- Sign Up Link -->
+  <div class="signup-link">
+    ¿Ya tienes cuenta? <a href="#" style="color: #007bff">Inicia Sesión!</a>
   </div>
+</div>
+
+<!-- Footer -->
+<div class="footer">
+  <span>Copyright © inventarioApp 2025</span>
+  <span
+    ><a href="#" style="color: #333">Politicas de privacidad</a> ·
+    <a href="#" style="color: #333">Terms & Conditions</a></span
+  >
+</div>
+
 </div>
