--- a/inventario-app/src/app/editar-producto/editar-producto.html
+++ b/inventario-app/src/app/editar-producto/editar-producto.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="form-container">
     <div class="text-center">
-      <h3 class="form-title">Agregar</h3>
+      <h3 class="form-title">Editar Producto</h3>
     </div>
 
     <form (ngSubmit)="onSubmit()">
@@ -25,7 +25,7 @@
 
       <div class="btn-actions">
         <a href="/" class="link-regresar">Regresar</a>
-        <button type="submit" class="btn-login">Agregar</button>
+        <button type="submit" class="btn-login">Editar</button>
       </div>
     </form>
   </div>
