--- a/inventario-app/src/app/producto-lista/producto-lista.html
+++ b/inventario-app/src/app/producto-lista/producto-lista.html
@@ -10,6 +10,7 @@
         <th scope="col">Descripción del producto</th>
         <th scope="col">Precio</th>
         <th scope="col">Existencias</th>
+       <th scope="col" class="text-center">Acciones</th>
       </tr>
     </thead>
     <tbody>
@@ -19,6 +20,10 @@
         <td>{{producto.descripcion}}</td>
         <td>{{producto.precio}}</td>
         <td>{{producto.existencias}}</td>
+        <td class = "text-center"><div>
+          <button (click)="editarProducto(producto.idProducto)" class="btn"><i class="fa-solid fa-pen-to-square" style="color: #1dd755;"></i></button>
+          <button (click)="eliminarProducto(producto.idProducto)" class="btn"><i class="fa-solid fa-trash" style="color: #df0101;"></i></button>
+        </div></td>
       </tr>
     }
     </tbody>
